--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta name="google-site-verification" content="jth8J-966Q629_Fw41dtqQqmoTvMKYD6s_OUD-rI-80" />
 {% seo %}
 
 {% feed_meta %}
