--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,8 @@
 {% endunless %}
 <!-- End selecting skin -->
 
-<script async src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
+<script async src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
+<script async src="//at.alicdn.com/t/font_2528802_fgn6svpq8ns.js"></script>
+
 
 {% include custom-head.html %}
