--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -1,1 +1,15 @@
 // Placeholder to allow customizing styles.
+
+.icon {
+    width: 2em; height: 2em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.icon-sm{
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
