--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <i>
-      <svg class="icon" aria-hidden="true">
+      <svg class="icon-fix" aria-hidden="true">
         <use xlink:href="#icon-user"></use>
       </svg>
     </i>
